# ice-cream-dataops

./: pyproject.toml
.github/workflows/: deploy.yaml
ice-cream-dataops/: config.prod.yaml  config.test.yaml
ice-cream-dataops/modules/bootcamp/data_foundation/auth/: data_developer.yaml
ice-cream-dataops/modules/bootcamp/ice_cream_api/auth/: icapi_extractors.yaml
ice-cream-dataops/modules/bootcamp/ice_cream_api/data_sets/: data_sets.yaml
ice-cream-dataops/modules/bootcamp/ice_cream_api/functions/: schedules.Schedules.yaml
ice-cream-dataops/modules/bootcamp/ice_cream_api/transformations/: contextualize_ts_assets.schedule.yaml  contextualize_ts_assets.yaml  create_asset_hierarchy.schedule.yaml
ice-cream-dataops/modules/bootcamp/ice_cream_api/workflows/: wf_icapi_data_pipeline.WorkFlow.yaml  wf_icapi_data_pipeline.WorkFlowVersion.yaml
ice-cream-dataops/modules/bootcamp/use_cases/oee/auth/: data_pipeline_oee.yaml
ice-cream-dataops/modules/bootcamp/use_cases/oee/data_sets/: data_sets.yml
